crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__filtered_is_not_null.snap
---
source: crates/store/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬──────────────────────┬────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┐
│ frame_nr             ┆ log_time             ┆ /this/that:example.MyPoints:colors ┆ /this/that:example.MyPoints:labels ┆ /this/that:example.MyPoints:points │
│ ---                  ┆ ---                  ┆ ---                                ┆ ---                                ┆ ---                                │
│ type: i64            ┆ type: Timestamp(ns)  ┆ type: List[nullable u32]           ┆ type: List[nullable Utf8]          ┆ type: List[nullable Struct[2]]     │
│ index_name: frame_nr ┆ index_name: log_time ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints        │
│ kind: index          ┆ kind: index          ┆ component: example.MyPoints:colors ┆ component: example.MyPoints:labels ┆ component: example.MyPoints:points │
│                      ┆                      ┆ component_type: example.MyColor    ┆ component_type: example.MyLabel    ┆ component_type: example.MyPoint    │
│                      ┆                      ┆ entity_path: /this/that            ┆ entity_path: /this/that            ┆ entity_path: /this/that            │
│                      ┆                      ┆ kind: data                         ┆ is_static: true                    ┆ kind: data                         │
│                      ┆                      ┆                                    ┆ kind: data                         ┆                                    │
╞══════════════════════╪══════════════════════╪════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╡
└──────────────────────┴──────────────────────┴────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┘
