crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__selection.snap
---
source: crates/store/re_dataframe/src/query.rs
assertion_line: 1838
expression: dataframe.all_columns_collected()
snapshot_kind: text
---
[]
