crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__view_contents-2.snap
---
source: crates/store/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬──────────────────────┬────────────────────────────────────┬────────────────────────────────────┐
│ frame_nr             ┆ log_time             ┆ /this/that:example.MyPoints:colors ┆ /this/that:example.MyPoints:labels │
│ ---                  ┆ ---                  ┆ ---                                ┆ ---                                │
│ type: Int64          ┆ type: Timestamp(ns)  ┆ type: List(UInt32)                 ┆ type: List(Utf8)                   │
│ index_name: frame_nr ┆ index_name: log_time ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints        │
│ kind: index          ┆ kind: index          ┆ component: example.MyPoints:colors ┆ component: example.MyPoints:labels │
│                      ┆                      ┆ component_type: example.MyColor    ┆ component_type: example.MyLabel    │
│                      ┆                      ┆ entity_path: /this/that            ┆ entity_path: /this/that            │
│                      ┆                      ┆ kind: data                         ┆ is_static: true                    │
│                      ┆                      ┆                                    ┆ kind: data                         │
╞══════════════════════╪══════════════════════╪════════════════════════════════════╪════════════════════════════════════╡
│ 30                   ┆ null                 ┆ [2]                                ┆ [c]                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 40                   ┆ null                 ┆ [3]                                ┆ [c]                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 50                   ┆ null                 ┆ [4]                                ┆ [c]                                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 70                   ┆ null                 ┆ [6]                                ┆ [c]                                │
└──────────────────────┴──────────────────────┴────────────────────────────────────┴────────────────────────────────────┘
