crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__view_contents.snap
---
source: crates/store/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬──────────────────────┐
│ frame_nr             ┆ log_time             │
│ ---                  ┆ ---                  │
│ type: Int64          ┆ type: Timestamp(ns)  │
│ index_name: frame_nr ┆ index_name: log_time │
│ kind: index          ┆ kind: index          │
╞══════════════════════╪══════════════════════╡
└──────────────────────┴──────────────────────┘
